[package]
name = "embeddedsw-rs-samples"
version = "0.1.0"
edition = "2021"
authors = ["kazuki ikemori (kadu-v)"]
license = "MIT OR Apache-2.0"
descritpion = """
Sample application using embeddedsw-rs.
"""
readme = "README.md"
documentation = "..."
repository = "https://github.com/kadu-v/embeddedsw-rs-samples"
kyewords = ["zynq", "embedded"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embeddedsw-rs = { version = "0.1.0", git = "https://github.com/nefrock/embeddedsw-rs.git", branch = "master", features = ["xilffs", "xalloc"] }



